src/main/java/com/example/DiplomaSite/error/DefenseResultValidationException.java
package com.example.DiplomaSite.error;

public class DefenseResultValidationException extends RuntimeException{
    public DefenseResultValidationException(String message) {
        super(message);
    }
}
